<resources>
    <string name="app_name">Alem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Войти</string>
    <string name="registration">Зарегестрироваться</string>
    <string name="log">Логин</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="id">ИИН</string>
</resources>