<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_img"
        android:layout_width="290dp"
        android:layout_height="418dp"
        android:src="@drawable/start_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_log_editTv"
        android:paddingStart="16dp"
        android:hint="@string/log"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/app_margin"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password_editTv"
        android:paddingStart="16dp"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_log_editTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/app_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_editTv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/main"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/app_margin"/>


</androidx.constraintlayout.widget.ConstraintLayout>